<resources>
    <string name="app_name">Hmt AlEngaz</string>
    <string name="title_activity_profile">Profile</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="action_settings">Settings</string>

    <string name="GOOGLE_MAPS_API_KEY"> AIzaSyAYAVlT6zJ-U_yOXX5gg_arXcJiq-XO438 </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_result">Search Results</string>
    <string name="add_srv_u_want">Please add the place you want</string>
    <string name="logout">logout</string>
    <string name="login">Login...</string>
    <string name="offer">Offers</string>
    <string name="done">done</string>
    <string name="office_work_service">Labor office services</string>
    <string name="evaluation_search">Evaluation search</string>
    <string name="search_by_place">Search by place</string>
    <string name="add_service">Add service</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login_text">Log In</string>
    <string name="no_account">Don\'t have an account yet? </string>
    <string name="create_one">Create account</string>
    <string name="welcome">Welcome to Hemtt el enjaz</string>
    <string name="remember_me">Remember me</string>
    <string name="client_need_service">client wants a service</string>
    <string name="service_provider">Service Provider</string>
    <string name="service">Services</string>

    <string name="update_password">update password</string>
    <string name="update">update</string>
    <string name="profiledescreption">Hi there , I\'m using Hmt Engaz App</string>
    <string name="name_client">client name</string>
    <string name="email"> email</string>
    <string name="phone">phone </string>
    <string name="title"> office title</string>
    <string name="city">city</string>
    <string name="area">area</string>
    <string name="register"> create account</string>
    <string name="service_detail">service detail</string>
    <string name="service_name">service name</string>
    <string name="my_service">my services</string>
    <string name="empty_username">user name is empty</string>
    <string name="empty_password">password is empty</string>
    <string name="faild">failed</string>
    <string name="something_went_haywire">something went haywire</string>
    <string name="empty_email">empty_email</string>
    <string name="inv_email">invalid email address</string>
    <string name="choose_photo">choose photo</string>
    <string name="sel_per_photo">Select personal photo</string>
    <string name="empty_phone">phone number is empty</string>
    <string name="inv_phone">invalid phone number</string>
    <string name="add_photo">Add personal photo</string>
    <string name="at_least_3ch">at least 3 characters</string>
    <string name="pass_bet_4_10">between 4 and 10 alphanumeric characters</string>
    <string name="title_3ch">at least 3 characters</string>
    <string name="city_at_3ch">at least 3 characters</string>
    <string name="address_at_3">at least 3 characters</string>
    <string name="offers">offers</string>
    <string name="profile">profile</string>
    <string name="hi_there_i_m_here_using_hemtt_al_enjaz_app">Hi there ,i\'m here using Hmt Al Engaz App</string>
    <string name="update_profile">Update profile</string>
    <string name="connection">check network connection</string>
    <string name="choose_office">please choose office</string>
    <string name="contact">Contact Us</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="start_date"> start date</string>
    <string name="expire_date"> end date</string>
    <string name="cost">cost</string>
    <string name="office_name">office name </string>
    <string name="state"> state</string>
    <string name="rate">rate</string>
    <string name="order_state">order state</string>
    <string name="trans_name">name</string>
    <string name="trans_date">date</string>
    <string name="trans_cost">cost</string>
    <string name="trans_image"> Photo</string>
    <string name="upload_img">upload photo</string>
    <string name="trans_confirm"> confirm</string>
    <string name="add_rate"> add rate</string>
    <string name="add_address">add address </string>
    <string name="about">about us</string>
    <string name="add_here">Add service</string>
    <string name="add_service_here">Add service here</string>
    <string name="no_services">There are no services to display</string>
    <string name="nochange">There are no changes occur</string>
    <string name="add_service_details">Add service detail here</string>
    <string name="add_phone">Add your phone number here</string>
    <string name="add_another_phone">Add another mobile number here</string>
    <string name="add_email">Add email address here</string>
    <string name="location">location</string>
    <string name="date">Date</string>
    <string name="service_details">Show service details</string>
    <string name="ser_name">Service name </string>
    <string name="serv_details">Service details</string>
    <string name="serv_sd">Start date</string>
    <string name="serv_ed">End date</string>
    <string name="off_name">Office name</string>
    <string name="serv_cost">Service cost</string>
    <string name="ch_off_serv">choose office</string>
    <string name="pay">payment</string>
    <string name="add_date">Add date</string>
    <string name="enter_date">enter date</string>
    <string name="enter_cost">enter cost</string>

    <string name="order">Order</string>
    <string name="order_date"> Date</string>
    <string name="add_serv_cost">Add Service Cost</string>
    <string name="end_serv">End Service</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="not">Notification</string>
    <string name="services">Services</string>
    <string name="no_order">There are no orders to display</string>
    <string name="detail">detail</string>
    <string name="orders">orders</string>
    <string name="done2">Done</string>
    <string name="adding_serv">Waiting for adding service data...</string>
    <string name="send">send</string>
    <string name="send_data">sending data ..</string>
    <string name="Terms_and_Conditions">Terms and Conditions</string>
    <string name="cong">Congratulation</string>
    <string name="paying">paying...</string>
    <string name="en">Enter name</string>
    <string name="ed">Enter date</string>
    <string name="etf">Enter transfer amount</string>
    <string name="eti">Choose Transfer image</string>
    <string name="ts">The transfer has been successful. Thank you for your trust in our services</string>
    <string name="sas">Service successfully added</string>
    <string name="esn">Enter service name</string>
    <string name="esd">Enter service detail</string>
    <string name="ep">Enter phone</string>
    <string name="inv_ph">Invalid phone</string>
    <string name="eap">Enter another phone</string>
    <string name="ee">Enter email</string>
    <string name="inv_e">Invalid email</string>
    <string name="sl">Select your location</string>
    <string name="suss">success</string>
    <string name="esub">Enter subject</string>
    <string name="em">Enter message</string>
    <string name="s">Sending...</string>

</resources>
