<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/profile_menu"
        android:orderInCategory="100"
        android:title="@string/profile"

        android:icon="@drawable/profile_icon"
        app:showAsAction="never"/>

   
    <item
        android:id="@+id/myservice_menu"
        android:orderInCategory="200"
        android:title="@string/my_service"

        android:icon="@drawable/offer_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/contact_menu"
        android:orderInCategory="200"
        android:title="@string/contact"
        android:icon="@drawable/offer_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_menu"
        android:orderInCategory="200"
        android:title="@string/about"
        android:icon="@drawable/offer_icon"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout_menu"
        android:orderInCategory="300"
        android:title="@string/logout"
        android:icon="@drawable/logout_icon"
        app:showAsAction="never" />

</menu>