<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.SemiColon.Hmt.elengaz.Activities.RegisterOffice">
    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_cover_image"
        android:background="@drawable/back"
        android:elevation="4dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"

            android:src="@mipmap/create" />
        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"

            android:src="@mipmap/menu" />

        <TextView
            android:id="@+id/name"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="انشاء حساب "
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/user_profile"
             />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            android:textColor="@color/white"
            android:layout_below="@+id/user_photo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtusername"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical|left"
                android:hint="@string/username"
                android:inputType="text"
                android:drawableLeft="@drawable/user_name"
                android:scrollHorizontally="true"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_bg"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"

                />

            <EditText
                android:id="@+id/edtpass"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/pass"
                android:background="@drawable/et_bg"
                android:padding="10dp"
                android:layout_marginBottom="10dp"

                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/pass_icon"
                android:textSize="18dp"
                android:scrollHorizontally="true"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary">

            </TextView>
            <EditText
                android:id="@+id/edtemail"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="8dp"
                android:gravity="left"
                android:hint="@string/email"
                android:background="@drawable/et_bg"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/email"
                android:textSize="18dp"
                android:scrollHorizontally="true"
                />

             <EditText
                android:id="@+id/edtphone"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="8dp"
                android:gravity="left"
                android:hint="@string/phone"
                android:background="@drawable/et_bg"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="phone" 
                android:drawableLeft="@drawable/phone_icon"
                android:textSize="18dp"
                android:scrollHorizontally="true"
                />

            <EditText
                android:id="@+id/edt_office_title"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="8dp"
                android:gravity="left"
                android:hint="@string/title"
                android:background="@drawable/et_bg"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="text"
                android:drawableLeft="@drawable/map"
                android:textSize="18dp"
                android:scrollHorizontally="true"
                />
            <EditText
                android:id="@+id/edt_office_city"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="8dp"
                android:gravity="left"
                android:hint="@string/city"
                android:background="@drawable/et_bg"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="text"
                android:drawableLeft="@drawable/map"
                android:textSize="18dp"
                android:scrollHorizontally="true"
                />


            <EditText
                android:id="@+id/edt_office_area"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="8dp"
                android:gravity="left"
                android:hint="@string/area"
                android:background="@drawable/et_bg"
                android:padding="10dp"
                android:textColor="#000"
                android:textColorHint="#000"
                android:inputType="text"
                android:drawableLeft="@drawable/map"
                android:textSize="18dp"
                android:scrollHorizontally="true"
                />
           <!-- <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp"
                android:background="@drawable/btn1"
                android:text="@string/register"/>
-->        </LinearLayout>
    </ScrollView>
</LinearLayout>
